# pca_genetic

./: .gitignore  CMakeLists.txt  CMakeSettings.json  compile_flags.txt  notes.txt
data/: .basic_run.gen.swp  basic_run.gen  short_log.gen
lib/: GeneticAlgorithms.lib  GeneticModels.lib
src/: .GeneticAlgorithm.hpp.swp  BasicGeneticAlgorithm.cpp  BasicGeneticAlgorithm.hpp  CMakeLists.txt  CloneableHandle.hpp  FitnessCalculator.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  GeneticModel.hpp  GeneticModel.tpp  GeneticTypes.hpp  LinearGeneticModel.hpp  Logger.cpp  Logger.hpp  ModelInputData.hpp  ModelInputDataVector.cpp  ModelOutputData.hpp  ModelOutputDataVector.hpp  ModelParameters.hpp  ParentCombiner.hpp  ParentSelector.hpp  models
src/algorithm/: .GeneticAlgorithm.cpp.swp  BestFitnessSelector.cpp  BestFitnessSelector.test.cpp  CMakeLists.txt  Combiner.hpp  CreationalStrategies.hpp  DecisionCalculator.cpp  DecisionCalculator.test.cpp  DistanceCalculator.cpp  DistanceCalculator.hpp  DistanceCalculator.test.cpp  DistributionSelector.cpp  DistributionSelector.test.cpp  Evaluator.hpp  FitnessCalculator.hpp  FitnessCalculator.test.hpp  FitnessScores.cpp  FitnessScores.hpp  FitnessSumSelector.cpp  FitnessSumSelector.test.cpp  Generation.cpp  Generation.hpp  GenerationCreator.cpp  GenerationCreator.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  GeneticAlgorithm.test.cpp  GeneticAlgorithmFactory.cpp  GeneticAlgorithmFactory.hpp  GeneticAlgorithmParameters.cpp  GeneticAlgorithmParameters.hpp  GeneticAlgorithmParameters.test.cpp  GeneticTrainer.cpp  GeneticTrainer.hpp  Mutator.hpp  ParamJSONTest.cpp  ParentCombiner.hpp  ParentCombiner.test.hpp  ParentSelector.hpp  ParentSelector.test.hpp  (+14 more)
src/algorithm/combination/: ParentCombiner.hpp  SingleCrossingCombiner.cpp
src/algorithm/combination/random/: RandomCrossingCombiner.cpp  RandomCrossingCombiner.hpp
src/algorithm/combination/single/: SingleCrossingCombiner.cpp  SingleCrossingCombiner.hpp
src/algorithm/fitness/: FitnessCalculator.hpp
src/algorithm/fitness/decision/: DecisionCalculator.cpp  DecisionCalculator.hpp
src/algorithm/fitness/distance/: DistanceCalculator.cpp  DistanceCalculator.hpp
src/algorithm/mutation/: Mutator.hpp
src/algorithm/selection/: FitnessSumSelector.cpp  FitnessSumSelector.hpp  ParentSelector.hpp
src/algorithm/selection/best/: BestFitnessSelector.cpp  BestFitnessSelector.hpp
src/algorithm/selection/distribution/: DistributionSelector.cpp  DistributionSelector.hpp
src/algorithm/selection/sum/: FitnessSumSelector.cpp  FitnessSumSelector.hpp
src/algorithm/strategies/: AlgorithmFactory.hpp  BestFitnessSelector.hpp  CMakeLists.txt  DecisionCalculator.hpp  DistanceCalculator.cpp  DistributionSelector.cpp  DistributionSelector.hpp  FitnessSumSelector.hpp  RandomCrossingCombiner.cpp  RandomCrossingCombiner.hpp  SingleCrossingCombiner.cpp  SingleCrossingCombiner.hpp
src/json/: AbstractJSONFactory.hpp  CMakeLists.txt  JSONFile.cpp  JSONFile.hpp  JSONObject.cpp  JSONObject.hpp  JSONObject.test.cpp  JSONSerializable.hpp  JSONTest.cpp
src/model/: CMakeLists.txt  ConvolutionModel.cpp  ConvolutionModel.hpp  ConvolutionModel.test.cpp  DownSamplingModel.cpp  DownSamplingModel.hpp  DownSamplingModel.test.cpp  GeneticModel.cpp  GeneticModel.hpp  GeneticModel.test.hpp  GeneticModelFactory.cpp  GeneticModelFactory.hpp  InterconnectedGeneticModel.cpp  InterconnectedGeneticModel.hpp  InterconnectedGeneticModel.test.cpp  LinearGeneticModel.cpp  LinearGeneticModel.hpp  LinearGeneticModel.test.cpp  LogisticRegressionModel.cpp  ModelHandle.cpp  ModelHandle.hpp  ModelInputData.hpp  ModelInputData.test.hpp  ModelInputDataVector.cpp  ModelInputDataVector.hpp  ModelInputDataVector.test.cpp  ModelInputImage.cpp  ModelInputImage.hpp  ModelOutputData.hpp  ModelOutputData.test.hpp  ModelOutputDataVector.cpp  ModelOutputDataVector.hpp  ModelOutputDataVector.test.cpp  ModelParameters.hpp  NeuralModel.cpp  NeuralModel.hpp  NeuralModel.test.cpp
src/model/convolution/: ConvolutionModel.cpp  ConvolutionModel.hpp
src/model/downsample/: DownSamplingModel.cpp  DownSamplingModel.hpp  DownSamplingModel.test.cpp
src/model/input/: ModelInputData.hpp  ModelInputDataVector.cpp  ModelInputDataVector.hpp
src/model/interconnect/: InterconnectedGeneticModel.hpp
src/model/linear/: LinearGeneticModel.cpp  LinearGeneticModel.hpp
src/model/neural/: NeuralModel.cpp  NeuralModel.hpp  NeuralModel.test.cpp  notes.txt
src/model/output/: ModelOutputData.hpp  ModelOutputDataVector.cpp  ModelOutputDataVector.hpp
src/model/regression/: LogisticRegressionModel.cpp  LogisticRegressionModel.hpp
src/simulator/: CMakeLists.txt  GeneticSim.cpp  Simulation.cpp  Simulation.hpp  Simulation.test.cpp  SimulationFileReader.cpp  SimulationFileReader.hpp
test/: basicTests.cpp
tools/: basic_nn.json  graph.py  sweeper.py
tools/mutChanceSweep/: slurm-8377259.out  slurm-8379854.out
tools/mutSize/: mutSizeSweep.slurm
tools/offset/: offsetSweep.slurm
